// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ShippingAddressForm check children /> 1`] = `
<form
  autoComplete="on"
/>
`;

exports[`<ShippingAddressForm proptypes required /> 1`] = `
<form
  autoComplete="on"
/>
`;

exports[`<ShippingAddressForm/> 1`] = `
<form
  autoComplete="on"
>
  <div>
    test
  </div>
</form>
`;
